# meerkat-mobkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  deny.toml
.claude/commands/: ship.md
.claude/skills/: banana-skill  mobkit-platform
.github/: CODEOWNERS  release.yml
.github/workflows/: ci.yml  release.yml
.rct/: checklist.yaml  plan.yaml  spec.yaml
.rct/outputs/: phase10-choke107-baseline-po.txt  phase10-e2e1001-baseline-po.txt  phase14-candidate-phase3c-targets-po.txt
console/: browser-e2e.cjs  browser-entry.cjs  build.cjs  index.cjs  package-lock.json  package.json  smoke.cjs
console/src/: ConsoleApp.tsx  browser.tsx  index.tsx  types.ts
crates/meerkat-mobkit-core/: Cargo.toml
crates/meerkat-mobkit-core/examples/: library_mode_reference.rs  real_mob_llm_smoke.rs  skeleton.rs  smoke.rs  streaming_smoke.rs
crates/meerkat-mobkit-core/src/: auth.rs  baseline.rs  config_convention.rs  decisions.rs  governance.rs  http_auth.rs  http_console.rs  http_sse.rs  lib.rs  mob_handle_runtime.rs  mocks.rs  process.rs  protocol.rs  rpc.rs  runtime.rs  types.rs  unified_runtime.rs
crates/meerkat-mobkit-core/src/rpc/: console_ingress.rs  gating_methods.rs  memory_methods.rs  mob_methods.rs  routing_delivery_methods.rs  scheduling_methods.rs  session_store_methods.rs  subscribe_methods.rs
crates/meerkat-mobkit-core/src/runtime/: bootstrap.rs  console_ingress.rs  delivery.rs  event_transport.rs  gating.rs  memory.rs  module_boundary.rs  routing.rs  rpc.rs  scheduling.rs  session_store.rs  supervisor.rs
crates/meerkat-mobkit-core/src/unified_runtime/: builder.rs  edge_reconcile.rs  edge_types.rs  event_log.rs  http.rs  lifecycle.rs  mob_ops.rs  mod.rs  module_ops.rs  types.rs
crates/meerkat-mobkit-core/tests/: hooks.rs  jwks_cache_and_auth.rs  phase0.rs  phase0_console_contract.rs  phase0_external.rs  phase0_governance.rs  phase0b_external.rs  phase1.rs  phase10.rs  phase11.rs  phase12.rs  phase13.rs  phase2.rs  phase3c_targets.rs  phase4.rs  phase5.rs  phase5_lifecycle.rs  phase5_shutdown_drain.rs  phase7.rs  phase8.rs  phase9.rs  phase_a.rs  phase_c.rs  phase_d.rs  phase_e.rs  phase_f.rs  phase_g.rs  phase_h1.rs  phase_h2.rs  phase_mk001_discovery.rs  phase_mk005_006.rs  phase_mk019_wildcard_routes.rs  phase_p4_gc.rs  sse_ring_buffer.rs
docs/: docs.json  introduction.mdx  quickstart.mdx
docs/api/: rest.mdx  rpc.mdx  sse.mdx
docs/concepts/: delivery.mdx  events.mdx  gating.mdx  memory.mdx  modules.mdx  roster.mdx  scheduling.mdx  sessions.mdx
docs/guides/: authentication.mdx  console.mdx  module-system.mdx  unified-runtime.mdx
docs/rct/: console-rest-sse-contract-v0.1.0.json  console-rest-sse-contract-v0.2.0.json  original-plan.md  release-targets.json  traceability.md
docs/reference/: architecture.mdx  configuration.mdx  decisions.mdx  governance.mdx
docs/sdks/: python.mdx  rust.mdx  typescript.mdx
meerkat-mobkit/: Cargo.toml
meerkat-mobkit-core/examples/: library_mode_reference.rs  skeleton.rs  smoke.rs
meerkat-mobkit-core/src/: auth.rs  config_convention.rs  governance.rs  http_auth.rs  mocks.rs  rpc.rs  types.rs
meerkat-mobkit-core/tests/: hooks.rs  jwks_cache_and_auth.rs  phase0.rs  phase0_console_contract.rs  phase0_external.rs  phase0_governance.rs  phase0b_external.rs  phase1.rs  phase10.rs  phase11.rs  phase12.rs  phase13.rs  phase2.rs  phase3c_targets.rs  phase4.rs  phase5.rs  phase5_lifecycle.rs  phase5_shutdown_drain.rs  phase7.rs  phase8.rs  phase9.rs  phase_a.rs  phase_c.rs  phase_d.rs  phase_e.rs  phase_f.rs  phase_h1.rs  (+3 more)
meerkat-mobkit/examples/: library_mode_reference.rs  real_mob_llm_smoke.rs  skeleton.rs  smoke.rs  streaming_smoke.rs
meerkat-mobkit/src/: baseline.rs  config_convention.rs  contact_directory.rs  governance.rs  http_console.rs  http_interactions.rs  http_sse.rs  lib.rs  mob_handle_runtime.rs  process.rs  rpc.rs  runtime.rs
meerkat-mobkit/src/rpc/: gating_methods.rs  memory_methods.rs  mob_methods.rs  params.rs  routing_delivery_methods.rs  session_store_methods.rs
meerkat-mobkit/src/runtime/: console_ingress.rs  delivery.rs  event_transport.rs  module_boundary.rs  scheduling.rs  session_store.rs
meerkat-mobkit/src/unified_runtime/: cross_mob.rs  edge_types.rs  event_log.rs  http.rs  mob_ops.rs  mod.rs  module_ops.rs  types.rs
meerkat-mobkit/tests/: agent_lifecycle.rs  bigquery_adapter.rs  bigquery_gc.rs  console_experience.rs  e2e_sdk_wire.rs  e2e_target_contracts.rs  external_boundary.rs  gateway_external.rs  gating_policy.rs  governance_contracts.rs  hooks.rs  http_router.rs  jwks_cache_and_auth.rs  jwt_rsa.rs  mcp_boundary.rs  memory_store.rs  module_restart.rs  phase0.rs  phase0_console_contract.rs  phase0_external.rs  phase0_governance.rs  phase0b_external.rs  phase1.rs  phase10.rs  phase11.rs  phase12.rs  phase13.rs  phase2.rs  phase3c_targets.rs  phase5_lifecycle.rs  phase5_shutdown_drain.rs  phase7.rs  phase8.rs  phase9.rs  phase_a.rs  phase_c.rs  phase_d.rs  phase_g.rs  phase_h1.rs  phase_h2.rs  (+13 more)
scripts/: bump-sdk-versions.sh  pre-push-clippy.sh  release-hook.sh  verify-version-parity.sh
sdk/python/: pyproject.toml
sdk/python/examples/: h2_reference_app.py
sdk/python/meerkat_mobkit/: __init__.py  _client.py  _sse.py  _transport.py  agent_builder.py  builder.py  client.py  errors.py  events.py  helpers.py  models.py  runtime.py  transport.py  types.py
sdk/python/meerkat_mobkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/python/meerkat_mobkit/config/: auth.py  memory.py  session_store.py
sdk/python/meerkat_mobkit_sdk/: __init__.py  agent_builder.py  client.py  models.py  sse.py
sdk/python/meerkat_mobkit_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/python/meerkat_mobkit_sdk/config/: __init__.py  auth.py  memory.py  session_store.py
sdk/python/scripts/: h2_reference_flow.py  parity.py  productization.py
sdk/python/tests/: conftest.py  test_asgi_auth.py  test_builder.py  test_callback_tools.py  test_errors.py  test_events.py  test_init.py  test_models.py  test_types.py
(+219 files in other folders)
