[package]
name = "meerkat-mobkit"
description = "Companion orchestration platform for the Meerkat multi-agent runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
ring = "0.17"
chrono = "0.4"
chrono-tz = "0.10"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "process", "io-util", "io-std", "signal", "macros", "net"] }
axum = { version = "0.7", features = ["json"] }
async-stream = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
futures = "0.3"
meerkat-core = "0.4.13"
meerkat-client = "0.4.13"
meerkat-mob = "0.4.13"
meerkat-mcp = "0.4.13"
meerkat-models = "0.4.13"
meerkat = { version = "0.4.13", features = ["comms", "sub-agents", "skills", "mcp", "memory-store"] }
meerkat-session = "0.4.13"
meerkat-store = "0.4.13"
tempfile = "3"
async-trait = "0.1"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3"
tower = "0.5"
jsonwebtoken = "9"
async-trait = "0.1"
