[package]
name = "meerkat-mobkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
chrono-tz = "0.10"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
meerkat = { version = "0.4.1", features = ["comms"] }
meerkat-mob = "0.4.1"
futures = "0.3"
