[package]
name = "meerkat-mobkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
ring = "0.17"
chrono = "0.4"
chrono-tz = "0.10"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "process"] }
axum = { version = "0.7", features = ["json"] }
async-stream = "0.3"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
meerkat-core = "0.4.1"
meerkat-client = "0.4.1"
meerkat-mob = "0.4.1"
meerkat-mcp = "0.4.1"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
meerkat = { version = "0.4.1", features = ["comms"] }
futures = "0.3"
tower = "0.5"
jsonwebtoken = "9"
async-trait = "0.1"
