[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meerkat-mobkit"
version = "0.4.11"
description = "Python SDK for MobKit — companion orchestration platform for the Meerkat multi-agent runtime"
requires-python = ">=3.10"
license = {text = "MIT OR Apache-2.0"}
authors = [{name = "Luka Crnkovic-Friis"}]
keywords = ["agent", "llm", "ai", "meerkat", "orchestration", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://docs.rkat.ai"
Repository = "https://github.com/lukacf/meerkat-mobkit"
Documentation = "https://docs.rkat.ai"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["meerkat_mobkit*"]

[tool.setuptools.package-data]
meerkat_mobkit = ["py.typed"]
